--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
-Hello World
+<link rel="stylesheet" href="phone.css">
+<html>
+ <head>
+ <title>PAPA</title>
+ <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
+ integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w"
+ crossorigin="anonymous">
+ </head>
+ <body>
+   <div class="pure-menu pure-menu-horizontal" id="tab_bar">
+     <style scoped>
+        .button-menu {
+          font-size: 100%;
+          line-height: 1.2;
+          width: 120;
+          color: black;
+          background-color: white;
+          border: none;
+          outline: none;
+        }
+    </style>
+     <button class="button-menu pure-button pure-button-active" id="dialer">Dialer</button>
+     <button class="button-menu pure-button pure-button-active" id="list">Contact List</button>
+     <button class="button-menu pure-button pure-button-active" id="add">Add Contact</button>
+   </div>
+   <div id="content">
+   <div id="content_dialer">
+     <div class="header" id="myHeader">
+     <h2>Dialer</h2>
+     </div>
+     <div class="blankf">
+       <form class="pure-form">
+         <fieldset class="pure-group">
+           <input class="pure-input-1-3" id="num" type="number">
+         </fieldset>
+       </form>
+     </div>
+     <style scoped>
+        .button-num {
+            font-size: 150%;
+            line-height: 1.2;
+            width: 110;
+            margin: 5;
+        }
+        .button-large {
+            font-size: 150%;
+            line-height: 1.2;
+            width: 173;
+            margin: 5;
+        }
+    </style>
+       <div id="line1">
+         <button class="button-num pure-button">1</button>
+         <button class="button-num pure-button">2</button>
+         <button class="button-num pure-button">3</button>
+       </div>
+       <div id="line2">
+         <button class="button-num pure-button">4</button>
+         <button class="button-num pure-button">5</button>
+         <button class="button-num pure-button">6</button>
+       </div>
+       <div id="line3">
+         <button class="button-num pure-button">7</button>
+         <button class="button-num pure-button">8</button>
+         <button class="button-num pure-button">9</button>
+       </div>
+       <div id="line4">
+         <button class="button-num pure-button">*</button>
+         <button class="button-num pure-button">0</button>
+         <button class="button-num pure-button">#</button>
+       </div>
+       <div id="line5">
+         <button class="button-large pure-button">Dial</button>
+         <button class="button-large pure-button">Call</button>
+       </div>
+     </div>
+     <div id="content_list">
+       <div class="header" id="myHeader">
+       <h2>Contact List</h2>
+       </div>
+       <style scoped>
+          .button-small {
+              font-size: 100%;
+              margin: 3;
+          }
+      </style>
+       <div id="row1">
+         <button id="list" class="button-small pure-button">Robert Drake</button>
+         <button id="list" class="button-small pure-button">Emma Frost</button>
+         <button id="list" class="button-small pure-button">Doreen Green</button>
+       </div>
+       <div id="row2">
+         <button id="list" class="button-small pure-button">Jean Grey</button>
+         <button id="list" class="button-small pure-button">James Howlett</button>
+         <button id="list" class="button-small pure-button">Oror Munroe</button>
+       </div>
+       <div id="row3">
+         <button id="list" class="button-small pure-button">Katherine Pryde</button>
+         <button id="list" class="button-small pure-button">Piotr Rasputin </button>
+         <button id="list" class="button-small pure-button">Scott Summers</button>
+       </div>
+       <div id="row4">
+         <button id="list" class="button-small pure-button">Kurt Wagner</button>
+         <button id="list" class="button-small pure-button">Warren Worthington</button>
+         <button id="list" class="button-small pure-button">Charles Xavier</button>
+       </div>
+     </div>
+     <div id="add_content">
+       <div class="header" id="myHeader">
+       <h2>Add Contact</h2>
+       </div>
+       <div id="add form">
+         <form id="forms" class="form-size pure-form pure-form-stacked">
+             <label for="name">Name</label>
+             <input id="name" placeholder="Jane Smith">
+         </form>
+         <form id="forms" class="form-size pure-form pure-form-stacked">
+           <label for="name">Phone umber</label>
+           <input id="name" placeholder="123-456-7890">
+         </form>
+         <form id="forms" class="form-size pure-form pure-form-stacked">
+           <label for="name">Email address</label>
+           <input id="name" placeholder="jane.smith@colorado.edu">
+         </form>
+         <form id="forms" class="form-size pure-form pure-form-stacked">
+           <button class="pure-button">Add Contact</button>
+           <button class="pure-button">Clear</button>
+         </form>
+       </div>
+     </div>
+   </div>
+
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ </body>
+</html>
+
+<script src="phone.js"></script>
