--- a/HW4/index_me.html
+++ b/HW4/index_me.html
@@ -18,11 +18,11 @@
 		<div role="main">
 			<h1>Fill by the SNOW</h1>
 			<center>
-			<p><img src="https://hathaaaway.github.io/HW4/Materials/5.JPG" width="440" height="320"></p>
+			<p><img src="https://hathaaaway.github.io/HW4/Materials/5.jpg" width="440" height="320"></p>
 			</center>
 			<p>I would never forget my first day mastering the parallel. I feel I’m a FISH. It’s all about the feeling of freedom and satisfaction after challenging myself.</p>
 			<center>
-			<p><img src="https://hathaaaway.github.io/HW4/Materials/6.JPG" width="440" height="320"></p>
+			<p><img src="https://hathaaaway.github.io/HW4/Materials/6.jpg" width="440" height="320"></p>
 			</center>
 			<p>I would always divide my year into two parts: waiting for the ski season and enjoying the ski season. Growing up in the middle of China, snow seems to be a rare thing for me. I’ve only seen snow for twice before I came to Colorado for college.</p>
 			<h2>I HATE SNOW</h2>
@@ -30,11 +30,11 @@
 			<h2>BUT SKI CHANGED EVERYTHING</h2>
 			<p>The world is an enormous ski resort in my mind. I would always hope I could travel more places, France, Switzerland, Japan, Canada, and even Utah. I’ve heard some madmen travelled to Australia in Summer for skiing. But most of us obviously do not have that much free time for travelling and skiing. What I want to stress here is the change that skiing has brought to my life.</p>
 			<center>
-			<p><img src="https://hathaaaway.github.io/HW4/Materials/7.JPG" width="440" height="320"></p>
+			<p><img src="https://hathaaaway.github.io/HW4/Materials/7.jpg" width="440" height="320"></p>
 			</center>
 			<p>Skiing is an excellent approach to challenging ourselves. The variation of slop is one of the most challenging features for a skier, especially for the beginner. We would never picture what kind of slope we might have to face when we go straight down the hill. Falling is not terrifying once we’ve enjoyed the feeling of beating ourselves. I cherish those situations that I hesitated at the top of the mountain, which equipped me with the courage of finishing those mission-impossible tasks. I would also appreciate the satisfaction of challenging myself which encourage me to keep beating myself in order to enjoy this kind of feeling again.</p>
 			<center>
-			<p><img src="https://hathaaaway.github.io/HW4/Materials/8.JPG" width="440" height="320"></p>
+			<p><img src="https://hathaaaway.github.io/HW4/Materials/8.jpg" width="440" height="320"></p>
 			</center>
 			<p>My best friend used to say that it is so hard to find some partners that could follow your trace and matches your habit; however, you won’t feel too bad even when you are skiing alone. I would describe skiing as a self-appreciation and single sport. Skiing not only told us how to corporate with our bodies but also taught us how to enjoy that dark period alone. Skiing is a great chance to neglect all the annoyance and take time to integrated with nature, where all we have is a peaceful and pure world. I regard skiing as a great chance to take a nap in a whole week and what this incredible sport provides is a better person who is energetic and devoted to the upcoming challenges. </p>
 			<center>
