--- a/HW4/index.html
+++ b/HW4/index.html
@@ -5,6 +5,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="HW4.css">
 		<link href='https://fonts.googleapis.com/css?family=Annie Use Your Telescope' rel='stylesheet'>
+		<link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet'>
 	</head>
 	<body>
 		<div role="navigation">
