--- a/HW4/index.html
+++ b/HW4/index.html
@@ -51,7 +51,7 @@
 					Comment:
 				</label>
 				<input id="comments"></p>
-				<p><button id="commentButton">Submit comment</button></p>
+				<button type="button" onclick="alert('Sorry! Posting comments is currently disabled.')">Submit Comment</button>
 			</div>
 		</div>
 	</body>
