--- a/ProjectInstruction/index.html
+++ b/ProjectInstruction/index.html
@@ -54,14 +54,15 @@
                 <div class="col-md-3">
                     <nav class="docs-sidebar" data-spy="affix" data-offset-top="300" data-offset-bottom="200" role="navigation">
                         <ul class="nav">
-                            <li><a href="#line1">Getting Started</a>
+                            <li><a href="#line1">Install TELlMe</a>
+                            <li><a href="#line2">Getting Started</a>
                                 <ul class="nav">
-                                    <li><a href="#line1_1">Basic Interface</a></li>
-                                    <li><a href="#line1_2">Voice Recognition</a></li>
+                                    <li><a href="#line2_1">Basic Interface</a></li>
+                                    <li><a href="#line2_2">Voice Recognition</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#line2">Project Video</a></li>
-                            <li><a href="#line3">Related Website</a></li>
+                            <li><a href="#line3">Project Video</a></li>
+                            <li><a href="#line4">Related Website</a></li>
 
                         </ul>
                     </nav >
@@ -111,6 +112,48 @@
 
                         <div class="row">
                             <div class="col-md-12 left-align">
+                                <h2 class="dark-text">Installing Instruction <a href="#top">#back to top</a><hr></h2>
+                            </div>
+                            <!-- end col -->
+                        </div>
+                        <!-- end row -->
+
+                        <div class="row">
+                            <p>To install TELlMe, please unzip the zip archive <strong>TELlMe</strong> first.</p>
+                            <div class="col-md-11">
+                                <img src="images/upload/1.png" alt="" class="img-responsive img-thumbnail">
+                                <p>Open the xcode file SearchVUI.xcodeproj</p>
+                            </div>
+                            <!-- end col -->
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-11">
+                                <img src="images/upload/2.png" alt="" class="img-responsive img-thumbnail">
+                                <p>In the Xcode, lick the upper left corner and choose your desire platform.</p>
+                            </div>
+                            <!-- end col -->
+                        </div>
+                        <!-- end row -->
+
+                        <div class="row">
+                            <div class="col-md-11">
+                                <img src="images/upload/3.png" alt="" class="img-responsive img-thumbnail">
+                                <p>Run the code and the application will appear on the platform you choose.
+                                <br>Have fun!
+                                </p>
+                            </div>
+                            <!-- end col -->
+                        </div>
+                        <!-- end row -->
+
+                    </section>
+                    <!-- end section -->
+
+                    <section id="line2" class="section">
+
+                        <div class="row">
+                            <div class="col-md-12 left-align">
                                 <h2 class="dark-text">Getting Started <a href="#top">#back to top</a><hr></h2>
                             </div>
                             <!-- end col -->
@@ -119,7 +162,7 @@
 
                         <div class="row">
                             <div class="col-md-12">
-                              <h4 id="line1_1">Basic Interface <a href="#top">#back to top</a></h4>
+                              <h4 id="line2_1">Basic Interface <a href="#top">#back to top</a></h4>
                                 <div class="col-md-4">
                                     <img src="images/upload/IMG_0017.PNG" alt="" class="img-responsive img-thumbnail">
                                     <p>A lunch screen will display once you open the application.</p>
@@ -148,7 +191,7 @@
 
                         <div class="row">
                             <div class="col-md-12">
-                              <h4 id="line1_2">Voice Recognition <a href="#top">#back to top</a></h4>
+                              <h4 id="line2_2">Voice Recognition <a href="#top">#back to top</a></h4>
                               <p>TELlMe also supports voice input for searching and purchasing.</p>
                                 <div class="col-md-4">
                                     <img src="images/upload/IMG_0018_1.PNG" alt="" class="img-responsive img-thumbnail">
@@ -197,7 +240,6 @@
                                       <p>Again, the interface will showing all the possible results.
                                       </p>
                                   </div>
-                         </pre>
                             </div>
                             <!-- end col -->
                         </div>
@@ -206,7 +248,7 @@
                     </section>
                     <!-- end section -->
 
-                    <section id="line2" class="section">
+                    <section id="line3" class="section">
 
                         <div class="row">
                             <div class="col-md-12 left-align">
@@ -215,7 +257,6 @@
                             <!-- end col -->
                         </div>
                         <!-- end row -->
-
                         <h4>Demonstration Video</h4>
 
                         <p>The video describes the motivation for our project and demonstrates our prototype in action.</p>
@@ -223,17 +264,14 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="media">
-                                    <iframe width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XJzlEmR0JcA" frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
-
                         </div>
-
                     </section>
                     <!-- end section -->
 
-                    <section id="line3" class="section">
-
+                    <section id="line4" class="section">
                         <div class="row">
                             <div class="col-md-12 left-align">
                                 <h2 class="dark-text">Related Website<a href="#top">#back to top</a><hr></h2>
