--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -313,7 +313,7 @@
 
           <li class="l-section section">
             <div class="hire">
-              <h2>What I Have</h2>
+              <h2>What You Need</h2>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
                 <div class="work-request--options">
