Fix minor bugs in working experience

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -113,8 +113,7 @@
                       </div>
                       <p class="slider--item-title">Google Online <br> Marketing Challenge</p>
                       <p class="slider--item-description">
-                        Applied the concept of digital advertising and launched a series advertisement on Google for a non-profit client.
-                        Also produced future recommendations based on performance.
+                        Launched a series of digital advertisements on Google Ads for a non-profit client utilizing web analytics tools. Deployed 2 profitable Google ad campaigns based off the major needs of the company, resulting in a 680% increase in impressions, a 23% increase in click-through rate, and an 86% decrease in average cost-per-click.
                       </p>
                     </a>
                   </li>
@@ -173,11 +172,39 @@
               </div>
 
               <div class="about--options">
+                <!-- Update the latest job -->
+                <a href="#0">
+                  <!-- Trigger the modal with a button -->
+                  <h3>
+                    <button type="button" class="modal-button" data-toggle="modal" data-target="#myModal4">
+                      Business Analyst
+                    </button>
+                  </h3>
+                  <!-- Modal -->
+                  <div class="modal fade" id="myModal4" role="dialog">
+                    <div class="modal-dialog">
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h4 class="modal-title">Research and Business Development Analyst</h4>
+                        </div>
+                        <div class="modal-body">
+                          <p>
+                            Researched data from 3rd party databases and aligned with Claim Analysts in support of the ETL process. Wrote Python script to clean and digitize internal library of more than 320,000 files, reducing man-hours by 90%. Deployed the data warehouse in AWS Redshift and created quality dashboards through business intelligence tools.
+                          </p>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
                 <a href="#0">
                   <!-- Trigger the modal with a button -->
                   <h3>
                     <button type="button" class="modal-button" data-toggle="modal" data-target="#myModal">
-                      Data Analytics
+                      Data Analyst
                     </button>
                   </h3>
                   <!-- Modal -->
@@ -190,7 +217,7 @@
                         </div>
                         <div class="modal-body">
                           <p>
-                            Built, implemented and reiterated predictive models using Python intercept manufacturing and assembly errors to decrease warranty service costs. Contributed to internal data stewardship initiative and advised management on proper methods for data capture, storage, and reporting. Identified problematic touch-points in manufacturing and fulfillment processes and provided potential alternatives using descriptive analytics.
+                            Shifted incentives towards profitable dealers through segmenting customers into 4 groups. Implemented predictive models that decreased the customer rejection rate by 57%, resulting $6.78 million saving in warranty service costs over the next 5 years. Cut modeling time by 20% by organizing processing procedure and increased model interpretability through PCA.
                           </p>
                         </div>
                         <div class="modal-footer">
@@ -203,12 +230,12 @@
                 <a href="#0">
                   <!-- Trigger the modal with a button -->
                   <h3>
-                    <button type="button" class="modal-button" data-toggle="modal" data-target="#myModal">
+                    <button type="button" class="modal-button" data-toggle="modal" data-target="#myModal1">
                       Teaching Assistant
                     </button>
                   </h3>
                   <!-- Modal -->
-                  <div class="modal fade" id="myModal" role="dialog">
+                  <div class="modal fade" id="myModal1" role="dialog">
                     <div class="modal-dialog">
                       <!-- Modal content-->
                       <div class="modal-content">
@@ -217,34 +244,7 @@
                         </div>
                         <div class="modal-body">
                           <p>
-                            Performed academic tutoring and assistance in Information Management and Analytics, which discussed the foundation of the machine learning process and how to apply the machine learning framework to business problems. Responsible for grading assignments and exams.
-                          </p>
-                        </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-                <a href="#0">
-                  <!-- Trigger the modal with a button -->
-                  <h3>
-                    <button type="button" class="modal-button" data-toggle="modal" data-target="#myModal">
-                      System Engineer
-                    </button>
-                  </h3>
-                  <!-- Modal -->
-                  <div class="modal fade" id="myModal" role="dialog">
-                    <div class="modal-dialog">
-                      <!-- Modal content-->
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h4 class="modal-title">System Engineer Internship</h4>
-                        </div>
-                        <div class="modal-body">
-                          <p>
-                            Interned in one of the largest commercial and military aircraft repair stations in China. Participated in dismounting and repairing a Boeing A320 during the internship. Collaborated with approximately 100 team members and mastered an understanding of aircraft’s system.
+                            Developed and implemented interactive learning mediums to increase student understanding of course material. Assisted professor in guiding 160 students on homework assignments and project for 4 months. Graded projects, examinations, homework, and quizzes.
                           </p>
                         </div>
                         <div class="modal-footer">
@@ -313,7 +313,7 @@
 
           <li class="l-section section">
             <div class="hire">
-              <h2>What You Need</h2>
+              <h2>What I Have</h2>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
                 <div class="work-request--options">
