--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -66,9 +66,9 @@
               <div class="intro--options">
                 <a>
                   <h3>
-                    I'm a recent graduate of Leeds School of Business with experience in analyzing big data,
-                    gathering information from both internal and external sources, and presenting suitable results for business leads. My computer science background equips me with strong programming skills and statistical analysis ability.
-                    Python, R, SQL, and JavaScript are the languages I'm focusing on right now.
+                    I’m a data analyst making data tell stories based on my understanding of business operations. My expertise includes big data analytics, data visualization, predictive modeling, and statistical analysis. I enjoy interpreting and analyzing data in order to drive successful business solutions. 
+                    My colleagues would describe me as a driven, resourceful individual who maintains a positive, proactive attitude when faced with adversity. 
+                    Currently, I’m seeking opportunities that will allow me to on my analytical and modeling skills. Specific fields of interest include Fintech, Information Technology, and Computer Software.
                   </h3>
                 </a>
               </div>
