--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,7 +30,7 @@
       <div class="l-wrapper">
         <header class="header">
           <a class="header--logo" href="#0">
-            <img src="assets/img/logo.png" alt="Global">
+            <img src="assets/img/infographic_flat.png" alt="Global">
             <p>Portfolio</p>
           </a>
           <button class="header--cta cta">Get In Touch</button>
