--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="global, template, html, sass, jquery">
   <meta name="author" content="Bucky Maler">
   <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/img/infographic_flat.png" type="image/x-icon">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
@@ -18,7 +18,7 @@
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/logo.png" alt="Global">
+    <img src="assets/img/infographic_flat.png" alt="Global">
     <p>Portfolio</p>
   </a>
   <p class="device-notification--message">This website has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
